# Copyright © 2019 Andre Mukhsia, Lane Barton
# [This program is licensed under the "MIT License"]
# Please see the file COPYING in the source
# distribution of this software for license terms.

[package]
name = "games-closet"
version = "0.1.0"
authors = ["Andre Mukhsia <mukhsia@pdx.edu>", "Lane Barton <bartoniv@pdx.edu>"]

[dependencies]
rand = "0.3"
ggez = "0.5.0-rc.2"